# 02_mixed_precision_gemm

./: .gitignore  00_wmma_naive.cu  01_wmma_shared.cu  02_wmma_cp_async.cu  CMakeLists.txt  LICENSE  README.md  main.cu  mp_gemm_common.h
common/: bench_harness.h  cuda_primitives.cuh
scripts/: ncu_sol.sh  profile_layer2.sh
